<resources>
    <string name="app_name">Loot</string>

    <string name="loot_name">Name</string>
    <string name="loot_location">Location</string>
    <string name="currently_in_season">Currently in season</string>
    <string name="out_of_season">Currently out of season</string>
    <string name="loot_notes">Notes</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>